--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -58,5 +58,6 @@
 .burger span:nth-child(2) { transition: transform .3s .1s ease-out ,opacity .3s .1s ease-out , all .3s; }
 .burger span:nth-child(3) { transition: transform .3s 0s ease-out  ,opacity .3s 0s ease-out  , all .3s; }
 
+.burger.compressed { padding: 0 10px }
 .burger.compressed span { @apply bg-gray }
 .burger.compressed span { width: 4px; }
